meja/tests/wrong_labelled_arg.stderr
File "tests/wrong_labelled_arg.meja", line 3, characters 27-31:
Error: Incompatible types a:'a -> 'a and b:'b -> 'c:
       Cannot unify a:'a -> 'a and b:'b -> 'c
