meja/tests/wrong_labelled_arg.meja
let a = fun (~a) => { a; };

let b = fun () => { a(~b = true); };
